# fortressflow

./: .dockerignore  .env.example  .gitignore  COMPLIANCE_CHECKLIST.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  migration_helpers.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_lead_enrichment_columns.py  003_templates_and_outreach.py  003b_missing_tables.py  004_deliverability_fortress.py  005_sequence_engine_phase4.py  006_reply_detection_multichannel_phase5.py  007_chat_logs_phase7.py  008_users_auth.py  009_api_configurations.py  010_chat_session_state.py  011_agent_action_logs.py  012_agent_training_configs.py  aeb9ed50ccc6_add_diagnostic_runs_and_fix_suggestions_.py
backend/api/: index.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  rate_limit.py  redis_rate_limit.py  security.py
backend/app/models/: __init__.py  (+19 more)
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_agent_execution.py  test_analytics.py  test_analytics_endpoints.py  test_auth.py  test_auth_endpoints.py  test_command_engine.py  test_compliance.py  test_deliverability.py  test_dnc_endpoints.py  test_enrichment.py  test_hubspot.py  test_import.py  test_leads.py  test_phase3_deliverability.py  test_phase4_sequence_engine.py  test_phase5_multichannel.py  test_phase6_comprehensive.py  test_phase7_chat.py  test_presets_endpoints.py  test_sequences.py  test_webhooks_endpoints.py
(+279 files in other folders)
