[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fortressflow-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F811", "E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501", "F401"]
"tests/*" = ["F841", "E401"]
